<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

  <TextView
      android:id="@+id/title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:text="Calendar"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <CalendarView
      android:id="@+id/calView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="12dp"
      app:layout_constraintTop_toBottomOf="@+id/title"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"/>

  <EditText
      android:id="@+id/et_date1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:ems="10"
      android:gravity="start|top"
      android:inputType="textPersonName"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.502"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/calView" />

  <EditText
      android:id="@+id/et_dietlist"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="12dp"
      android:ems="10"
      android:gravity="start|top"
      android:inputType="textMultiLine"
      app:layout_constraintTop_toBottomOf="@+id/et_date1"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"/>

  <Button
      android:id="@+id/bt_input"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="48dp"
      android:text="@string/button1"
      app:layout_constraintEnd_toStartOf="@+id/bt_showlist"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/et_dietlist" />

  <Button
      android:id="@+id/bt_showlist"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/showlist"
      app:layout_constraintTop_toTopOf="@+id/bt_input"
      app:layout_constraintStart_toEndOf="@+id/bt_input"
      app:layout_constraintEnd_toEndOf="parent"/>
  <Button
      android:id="@+id/bt_analyze"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:text="@string/analyze"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@id/bt_input"/>



</androidx.constraintlayout.widget.ConstraintLayout>